Create Users module with types and `nestia` integration
